# csp-lib

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  compile_commands.json  custom_doxygen.css
docs/html/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  classes.html  csp_8c.html  csp_8c.js  csp_8c__incl.dot  csp_8c__incl.map  csp_8c__incl.md5  csp_8c_a0d1cbedfaeb27e353d49f3f9c9f5a30a_cgraph.map  csp_8c_a0d1cbedfaeb27e353d49f3f9c9f5a30a_cgraph.md5  csp_8c_a0ec9ba5a3f78127657d0ab0f2d3a5bbd_cgraph.md5  csp_8c_a0ec9ba5a3f78127657d0ab0f2d3a5bbd_icgraph.dot  csp_8c_a0ec9ba5a3f78127657d0ab0f2d3a5bbd_icgraph.map  csp_8c_a0ec9ba5a3f78127657d0ab0f2d3a5bbd_icgraph.md5  csp_8c_a0f4b67899ee7788002586217b13dde81_cgraph.dot  csp_8c_a0f4b67899ee7788002586217b13dde81_icgraph.dot  (+658 more)
src/: algorithms.dox  benchmark-queens.c  benchmark-sudoku.c  csp.c  csp.h  csp.inc  csp_internal.h  diagrams.dox  examples.dox  forward-checking.c  forward-checking.h  heuristics.c  heuristics.h  modules.dox  performance.dox  solve-queens.c  solve-sudoku.c  sudoku_utils.c  sudoku_utils.h
tests/: test-constraint-accessors.c  test-constraint-to-check.c  test-constraint.c  test-context.c  test-create-sudoku-problem.c  test-forward-checking.c  test-init-finish-1.c  test-init-finish-2.c  test-init-finish-3.c  test-order-values-lcv.c  test-print-sudoku-solution.c  test-problem-is-consistent.c  test-problem.c  test-prune-neighbors.c  test-read-sudoku-puzzle.c  test-restore-pruned.c  test-select-unassigned-var.c  test-solve-forward-checking.c  test-solve-sudoku-integration.c
(+53 files in other folders)
